--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Persistencia</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Persistencia</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -19,4 +19,5 @@
     <string name="error_field_required">Este campo é obrigatório </string>
     <string name="permission_rationale">"Permissão aos contatos é necessária"</string>
     <string name="title_activity_contacts">ContactsActivity</string>
+    <string name="title_activity_login_sqlite">LoginSqliteActivity</string>
 </resources>
